# marga-manager

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROMPT.md  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.yml
ai-loop/: PLAN.md  (+5 more)
backend/: pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  throttles.py  urls.py  utils.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_passwordresetrequest.py
backend/apps/core/: audit.py  exceptions.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  views.py
backend/apps/kitchens/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/kitchens/migrations/: 0001_initial.py  (+1 more)
backend/apps/operations/: admin.py  analytics_urls.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/organizations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/payments/: admin.py  apps.py  models.py  payme_errors.py  payme_views.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  drf_settings.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_commands.py  test_kitchens.py  test_operations.py  test_organizations.py  test_payments.py  test_permissions.py  test_products.py  test_rate_limiting.py  test_saas_hardening.py
(+101 files in other folders)
